Updated the example tests
- MySQL support
- Include example files on assembly configuration

--- a/src/main/config/jndi.properties
+++ b/src/main/config/jndi.properties
@@ -4,4 +4,4 @@ jndi.syntax.separator=/
 jndi.syntax.ignorecase=true
 
 # Custom properties
-com.dattack.naming.standalone.StandaloneContextFactory.directory=./src/test/config/jndi
+com.dattack.naming.standalone.StandaloneContextFactory.directory=${basedir}/etc/jndi
