Load dynamically JDBC driver class - Updated the standalone JNDI loader - Refactoring - Added utility class - Minor format updates

--- a/src/main/config/jndi.properties
+++ b/src/main/config/jndi.properties
@@ -4,4 +4,5 @@ jndi.syntax.separator=/
 jndi.syntax.ignorecase=true
 
 # Custom properties
-com.dattack.naming.standalone.StandaloneContextFactory.directory=${basedir}/etc/jndi
+com.dattack.naming.standalone.StandaloneContextFactory.resources.directory=${basedir}/etc/jndi
+com.dattack.naming.standalone.StandaloneContextFactory.classpath.directory=${basedir}/lib,${basedir}/lib/drivers
