--- a/src/test/resources/jndi.properties
+++ b/src/test/resources/jndi.properties
@@ -4,4 +4,5 @@ jndi.syntax.separator=/
 jndi.syntax.ignorecase=true
 
 # Custom properties
-com.dattack.naming.standalone.StandaloneContextFactory.directory=./src/test/config/jndi
+com.dattack.naming.standalone.StandaloneContextFactory.resources.directory=./src/test/config/jndi
+com.dattack.naming.standalone.StandaloneContextFactory.classpath.directory=libs,libs/drivers
