Added analyzer program in assembly configuration.

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,14 @@
                                 <platform>windows</platform>
                             </platforms>
                         </program>
+                        <program>
+                            <mainClass>com.dattack.dbtools.ping.PingAnalyzer</mainClass>
+                            <name>analyzer</name>
+                            <platforms>
+                                <platform>unix</platform>
+                                <platform>windows</platform>
+                            </platforms>
+                        </program>
                     </programs>
                 </configuration>
             </plugin>
