New feature: added summary statistics.
The reporting tool now computes a few statistics indicators (min, max, mean, standard deviation, ...) for the analyzed metrics.

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>commons-cli</artifactId>
             <version>${commons-cli.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.4.1</version>
+        </dependency>
         <!-- For test only -->
         <dependency>
             <groupId>org.xerial</groupId>
