--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,14 @@
                                 <platform>windows</platform>
                             </platforms>
                         </program>
+                        <program>
+                            <mainClass>com.dattack.dbtools.integrity.DataIntegrityClient</mainClass>
+                            <id>dataintegrity</id>
+                            <platforms>
+                                <platform>unix</platform>
+                                <platform>windows</platform>
+                            </platforms>
+                        </program>
                     </programs>
                 </configuration>
             </plugin>
