minor: added codecov configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: java
+before_install:
+  - pip install --user codecov
+after_success:
+  - codecov
 notifications:
   email:
     recipients:
