--- a/pom.xml
+++ b/pom.xml
@@ -76,17 +76,18 @@
 		<maven-changelog-plugin.version>2.3</maven-changelog-plugin.version>
 		<maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
 		<maven-compiler-plugin.version>3.5</maven-compiler-plugin.version>
+		<maven-eclipse-plugin.version>2.10</maven-eclipse-plugin.version>
 		<maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
 		<maven-jxr-plugin.version>2.5</maven-jxr-plugin.version>
 		<maven-pmd-plugin.version>3.6</maven-pmd-plugin.version>
 		<maven-project-info-reports-plugin.version>2.8.1</maven-project-info-reports-plugin.version>
-		<maven-scm-provider-gitexe.version>1.9</maven-scm-provider-gitexe.version>
+		<maven-scm-provider-gitexe.version>1.9.4</maven-scm-provider-gitexe.version>
 		<maven-site-plugin.version>3.4</maven-site-plugin.version>
 		<maven-sortpom-plugin.version>2.4.0</maven-sortpom-plugin.version>
 		<maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
 		<maven-surefire-report-plugin.version>2.19.1</maven-surefire-report-plugin.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<slf4j.version>1.7.14</slf4j.version>
+		<slf4j.version>1.7.15</slf4j.version>
 		<sqlite.version>3.8.11.2</sqlite.version>
 		<taglist-maven-plugin.version>2.4</taglist-maven-plugin.version>
 		<versions-maven-plugin.version>2.2</versions-maven-plugin.version>
@@ -250,7 +251,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.9</version>
+				<version>${maven-eclipse-plugin.version}</version>
 				<configuration>
 					<outputDirectory>${eclipse.outputDirectory}</outputDirectory>
 					<additionalBuildcommands>
