Added drules example to assembly configuration

--- a/src/main/assembly/etc/dbtools.properties
+++ b/src/main/assembly/etc/dbtools.properties
@@ -3,7 +3,7 @@
 # Global configuration
 # ---------------------
 
-dbtools.etc=./src/main/config
+dbtools.etc=${basedir}/etc
 
 # the file system directory from which to load templates (*.flt)
 dbtools.templates.directory=${dbtools.etc}/templates
@@ -15,7 +15,7 @@ dbtools.templates.directory=${dbtools.etc}/templates
 # --------------------
 # Data integrity tool
 # --------------------
-drules.template.throwable=${dbtools.templates.directory}/default_throwable_message.ftl
-drules.template.email=${dbtools.templates.directory}/default_email.ftl
+drules.template.throwable=default_throwable_message.ftl
+drules.template.email=default_email.ftl
 drules.configuration.filename=${dbtools.etc}/drules_configuration.xml
 drules.notifications.filename=${dbtools.etc}/drules_notifications.xml
