--- a/src/main/assembly/etc/jndi.properties
+++ b/src/main/assembly/etc/jndi.properties
@@ -5,4 +5,4 @@ jndi.syntax.ignorecase=true
 
 # Custom properties
 com.dattack.naming.standalone.StandaloneContextFactory.resources.directory=${basedir}/etc/jndi
-com.dattack.naming.standalone.StandaloneContextFactory.classpath.directory=${basedir}/lib/ext
+com.dattack.naming.standalone.StandaloneContextFactory.classpath.directory=${basedir}/lib,${basedir}/lib/ext
