--- a/src/test/resources/jndi/jdbc/sqlite-db1.properties
+++ b/src/test/resources/jndi/jdbc/sqlite-db1.properties
@@ -1,5 +1,5 @@
 type=javax.sql.DataSource
 driverClassName=org.sqlite.JDBC
-url=jdbc:sqlite:./src/test/resources/db1.sqlite
+url=jdbc:sqlite:./src/test/resources/databases/db1.sqlite
 username=
 password=
