--- a/pom.xml
+++ b/pom.xml
@@ -1,203 +1,210 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <artifactId>parent</artifactId>
-        <groupId>com.dattack</groupId>
-        <version>1</version>
-    </parent>
-    <artifactId>dbtools</artifactId>
-    <version>0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <name>dbtools</name>
-    <description>A powerful set of command-line tools that provides a variety of functionality manipulating a database and its data.</description>
-    <url>http://www.dattack.com</url>
-    <inceptionYear>2014</inceptionYear>
-    <organization>
-        <name>Dattack Team</name>
-        <url>http://www.dattack.com/</url>
-    </organization>
-    <licenses>
-        <license>
-            <name>Apache License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
-    <developers>
-        <developer>
-            <id>cvarela</id>
-            <name>Carlos Varela</name>
-            <email>cvarela@dattack.com</email>
-            <organization>dattack.com</organization>
-            <organizationUrl>http://www.dattack.com</organizationUrl>
-            <roles>
-                <role>Java Developer</role>
-            </roles>
-            <timezone>Europe/Madrid</timezone>
-        </developer>
-    </developers>
-    <prerequisites>
-        <maven>3.0.4</maven>
-    </prerequisites>
-    <scm>
-        <connection>scm:git:https://github.com/dattack/dbtools.git</connection>
-        <developerConnection>scm:git:git+ssh://git@github.com/dattack/dbtools.git</developerConnection>
-        <tag>HEAD</tag>
-        <url>http://github.com/dattack/dbtools</url>
-    </scm>
-    <issueManagement>
-        <system>GitHub Issue Management</system>
-        <url>https://github.com/dattack/dbtools/issues</url>
-    </issueManagement>
-    <ciManagement>
-        <system>Travis CI</system>
-        <url>https://travis-ci.org/dattack/dbtools</url>
-    </ciManagement>
-    <distributionManagement>
-        <site>
-            <id>github</id>
-            <url>gitsite:git@https://github.com/dattack/dbtools.git</url>
-        </site>
-    </distributionManagement>
-    <properties>
-        <appassembler-maven-plugin.version>1.10</appassembler-maven-plugin.version>
-        <commons-cli.version>1.3.1</commons-cli.version>
-        <commons-io.version>2.4</commons-io.version>
-        <commons-math.version>3.6</commons-math.version>
-        <compiler.source.version>1.7</compiler.source.version>
-        <compiler.target.version>1.7</compiler.target.version>
-        <data-formats.version>0.1-SNAPSHOT</data-formats.version>
-        <freemarker.version>2.3.23</freemarker.version>
-        <jtoolbox-commons-email.version>0.1-SNAPSHOT</jtoolbox-commons-email.version>
-        <junit.version>4.12</junit.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <slf4j.version>1.7.15</slf4j.version>
-        <sqlite.version>3.8.11.2</sqlite.version>
-        <standalone-jndi.version>0.1-SNAPSHOT</standalone-jndi.version>
-    </properties>
-    <dependencies>
-        <dependency>
-            <groupId>com.dattack</groupId>
-            <artifactId>data-formats</artifactId>
-            <version>${data-formats.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.dattack</groupId>
-            <artifactId>jtoolbox-commons-email</artifactId>
-            <version>${jtoolbox-commons-email.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.dattack</groupId>
-            <artifactId>standalone-jndi</artifactId>
-            <version>${standalone-jndi.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>${commons-cli.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>${commons-io.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-math3</artifactId>
-            <version>${commons-math.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.freemarker</groupId>
-            <artifactId>freemarker</artifactId>
-            <version>${freemarker.version}</version>
-        </dependency>
-        <!-- For test only -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>${sqlite.version}</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-    <repositories>
-        <repository>
-            <releases>
-                <updatePolicy>never</updatePolicy>
-                <checksumPolicy>fail</checksumPolicy>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>dattack-releases</id>
-            <name>Dattack Releases</name>
-            <url>http://maven.dattack.com/release</url>
-        </repository>
-        <repository>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <updatePolicy>always</updatePolicy>
-                <checksumPolicy>warn</checksumPolicy>
-            </snapshots>
-            <id>dattack-snapshots</id>
-            <name>Dattack Snapshots</name>
-            <url>http://maven.dattack.com/snapshot</url>
-        </repository>
-    </repositories>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>appassembler-maven-plugin</artifactId>
-                <version>${appassembler-maven-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>scripts</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>assemble</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <repositoryLayout>flat</repositoryLayout>
-                    <repositoryName>lib</repositoryName>
-                    <programs>
-                        <program>
-                            <mainClass>com.dattack.dbtools.ping.Ping</mainClass>
-                            <id>dbping</id>
-                            <platforms>
-                                <platform>unix</platform>
-                                <platform>windows</platform>
-                            </platforms>
-                        </program>
-                        <program>
-                            <mainClass>com.dattack.dbtools.ping.PingAnalyzer</mainClass>
-                            <id>analyzer</id>
-                            <platforms>
-                                <platform>unix</platform>
-                                <platform>windows</platform>
-                            </platforms>
-                        </program>
-                        <program>
-                            <mainClass>com.dattack.dbtools.drules.DrulesClient</mainClass>
-                            <id>drules</id>
-                            <platforms>
-                                <platform>unix</platform>
-                                <platform>windows</platform>
-                            </platforms>
-                        </program>
-                    </programs>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>parent</artifactId>
+		<groupId>com.dattack</groupId>
+		<version>1</version>
+	</parent>
+	<artifactId>dbtools</artifactId>
+	<version>0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<name>dbtools</name>
+	<description>A powerful set of command-line tools that provides a variety of functionality manipulating a database and its data.</description>
+	<url>http://www.dattack.com</url>
+	<inceptionYear>2014</inceptionYear>
+	<organization>
+		<name>Dattack Team</name>
+		<url>http://www.dattack.com/</url>
+	</organization>
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<developers>
+		<developer>
+			<id>cvarela</id>
+			<name>Carlos Varela</name>
+			<email>cvarela@dattack.com</email>
+			<organization>dattack.com</organization>
+			<organizationUrl>http://www.dattack.com</organizationUrl>
+			<roles>
+				<role>Java Developer</role>
+			</roles>
+			<timezone>Europe/Madrid</timezone>
+		</developer>
+	</developers>
+	<prerequisites>
+		<maven>3.0.4</maven>
+	</prerequisites>
+	<scm>
+		<connection>scm:git:https://github.com/dattack/dbtools.git</connection>
+		<developerConnection>scm:git:git+ssh://git@github.com/dattack/dbtools.git</developerConnection>
+		<tag>HEAD</tag>
+		<url>http://github.com/dattack/dbtools</url>
+	</scm>
+	<issueManagement>
+		<system>GitHub Issue Management</system>
+		<url>https://github.com/dattack/dbtools/issues</url>
+	</issueManagement>
+	<ciManagement>
+		<system>Travis CI</system>
+		<url>https://travis-ci.org/dattack/dbtools</url>
+	</ciManagement>
+	<distributionManagement>
+		<site>
+			<id>github</id>
+			<url>gitsite:git@https://github.com/dattack/dbtools.git</url>
+		</site>
+	</distributionManagement>
+	<properties>
+		<appassembler-maven-plugin.version>1.10</appassembler-maven-plugin.version>
+		<commons-cli.version>1.3.1</commons-cli.version>
+		<commons-io.version>2.4</commons-io.version>
+		<commons-math.version>3.6</commons-math.version>
+		<commons-collections.version>3.2.2</commons-collections.version>
+		<compiler.source.version>1.7</compiler.source.version>
+		<compiler.target.version>1.7</compiler.target.version>
+		<data-formats.version>0.1-SNAPSHOT</data-formats.version>
+		<freemarker.version>2.3.23</freemarker.version>
+		<jtoolbox-commons-email.version>0.1-SNAPSHOT</jtoolbox-commons-email.version>
+		<junit.version>4.12</junit.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<slf4j.version>1.7.15</slf4j.version>
+		<sqlite.version>3.8.11.2</sqlite.version>
+		<standalone-jndi.version>0.1-SNAPSHOT</standalone-jndi.version>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>com.dattack</groupId>
+			<artifactId>data-formats</artifactId>
+			<version>${data-formats.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.dattack</groupId>
+			<artifactId>jtoolbox-commons-email</artifactId>
+			<version>${jtoolbox-commons-email.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.dattack</groupId>
+			<artifactId>standalone-jndi</artifactId>
+			<version>${standalone-jndi.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>${commons-cli.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>${commons-collections.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${commons-io.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>${commons-math.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>${freemarker.version}</version>
+		</dependency>
+		<!-- For test only -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>${sqlite.version}</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+	<repositories>
+		<repository>
+			<releases>
+				<updatePolicy>never</updatePolicy>
+				<checksumPolicy>fail</checksumPolicy>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>dattack-releases</id>
+			<name>Dattack Releases</name>
+			<url>http://maven.dattack.com/release</url>
+		</repository>
+		<repository>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<updatePolicy>always</updatePolicy>
+				<checksumPolicy>warn</checksumPolicy>
+			</snapshots>
+			<id>dattack-snapshots</id>
+			<name>Dattack Snapshots</name>
+			<url>http://maven.dattack.com/snapshot</url>
+		</repository>
+	</repositories>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>appassembler-maven-plugin</artifactId>
+				<version>${appassembler-maven-plugin.version}</version>
+				<executions>
+					<execution>
+						<id>scripts</id>
+						<phase>package</phase>
+						<goals>
+							<goal>assemble</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<repositoryLayout>flat</repositoryLayout>
+					<repositoryName>lib</repositoryName>
+					<programs>
+						<program>
+							<mainClass>com.dattack.dbtools.ping.Ping</mainClass>
+							<id>dbping</id>
+							<platforms>
+								<platform>unix</platform>
+								<platform>windows</platform>
+							</platforms>
+						</program>
+						<program>
+							<mainClass>com.dattack.dbtools.ping.PingAnalyzer</mainClass>
+							<id>analyzer</id>
+							<platforms>
+								<platform>unix</platform>
+								<platform>windows</platform>
+							</platforms>
+						</program>
+						<program>
+							<mainClass>com.dattack.dbtools.drules.DrulesClient</mainClass>
+							<id>drules</id>
+							<platforms>
+								<platform>unix</platform>
+								<platform>windows</platform>
+							</platforms>
+						</program>
+					</programs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
